Fixed navbar to be completely independent and fixed to the top while also being centered and no weird text-wrap happening when resizing. Also started on the live videos page.

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,23 +23,31 @@ body {
 }
 
 nav {
-    margin: -30px auto;
-    position: sticky;
-    top: 0;
     z-index: 99;
+    font-size: 12px;
+}
+
+.top-nav {
+    width: max-content;
+    display: inline-block;
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
 
 nav ul{
-    width: auto;
+    //width: auto;
     padding: 20px 0;
-    margin: 0 auto;
+    //margin: 0 auto;
     display: flex;
     //justify-content: center;
     list-style-type: none;
-    position: sticky;
+    //position: sticky;
 }
 
 .nav {
+    font-size: 1.6em;
     flex: 0 0 100%;
     padding: 20px 25px;
     background-color: #333;
@@ -171,6 +179,17 @@ a.footer-text:hover {
     position: absolute;
 }
 
+.gradient2 {
+    background-image: linear-gradient(to right, #cc87fa , #fd9800);
+    opacity: .25;
+    z-index: 0;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
 div.container {
     display: flex;
     flex-direction: column;
@@ -185,10 +204,10 @@ div.container {
 
 #active-img {
     margin: 0 auto;
-    height: 50%;
-    min-height: 400px;
-    width: 50%;
-    min-width: 600px;
+    height: 56%;
+    min-height: 300px;
+    width: 56%;
+    min-width: 450px;
 }
 
 .photo-credit {
@@ -272,6 +291,10 @@ footer {
 
 // DISCOGRAPHY STYLES
 
+.flex {
+    display: flex;
+}
+
 .bg-discography {
     background-image: url('/images/discography-bg.jpg');
     height: 100vh;
@@ -281,8 +304,18 @@ footer {
     position: relative;
 }
 
+.bg-live {
+    background-image: url('/images/live-bg.jpg');
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
 .subtitle {
     position: absolute;
+    font-size: 1.75em;
     opacity: 0;
     top: 32%;
     left: 55%;
@@ -348,6 +381,10 @@ tr:nth-of-type(2n) {
     table {
         flex: 0 1 48%;
     }
+
+    nav {
+        font-size: 10px;
+    }
 }
 @media (max-width: 820px) {
 
@@ -360,25 +397,19 @@ tr:nth-of-type(2n) {
         margin: 2%;
     }
 
-    nav {
-        display: block;
-        font-size: 10px;
-        top: -5px;
-    }
-
     .nav {
-        padding: 15px;
+        padding: 20px 12px;
     }
 
     nav ul li:first-of-type {
         a:hover {
-            padding-left: 12px;
+            padding-left: 9px;
             border-left: #CED2CC solid 3px;
         }
     }
     nav ul li:last-of-type {
         a:hover {
-            padding-right: 12px;
+            padding-right: 9px;
             border-right: #CED2CC solid 3px;
         }
     }
@@ -386,13 +417,16 @@ tr:nth-of-type(2n) {
 }
 @media (max-width: 750px) {
     .hero-content {
+        font-size: 40px;
         text-align: right;
         margin-right: 70px;
     }
 
-    .top-nav ul li {
-        flex-grow: 1;
+    .nav {
+        padding: 20px 12px;
+        font-size: 1em;
     }
+
 }
 
 // NEED 600px @media
